--- a/client/src/components/KeyFeature/KeyFeature2.css
+++ b/client/src/components/KeyFeature/KeyFeature2.css
@@ -13,7 +13,7 @@
 }
 
 .certificate-image img {
-  max-width: 100%;
+  max-width: 80%;
   height: auto;
 }
 
@@ -33,4 +33,6 @@
   font-size: 16px;
   color: #333333; /* Adjust as per design */
   line-height: 1.5;
+  display:flex;
+  justify-content: center;
 }
